--- a/Homework05.ipynb
+++ b/Homework05.ipynb
@@ -168,10 +168,19 @@
    "outputs": [],
    "source": [
     "# TODO: How many records ?\n",
+    "print(len(features))\n",
     "\n",
     "# TODO: How many features ?\n",
+    "print(len(features[0]))\n",
     "\n",
-    "# TODO: Plot some features"
+    "# TODO: Plot some features\n",
+    "\n",
+    "x = [f[0] for f in features]\n",
+    "y = [f[1] for f in features]\n",
+    "plt.scatter(x, y)\n",
+    "plt.xlabel(\"Feature 0\")\n",
+    "plt.ylabel(\"Feature 1\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -229,7 +238,12 @@
    },
    "outputs": [],
    "source": [
-    "# TODO: go through the list of features and make their lengths consistent"
+    "# TODO: go through the list of features and make their lengths consistent\n",
+    "min_len = min(len(f) for f in features)\n",
+    "print(min_len)\n",
+    "cropped_features = []\n",
+    "for f in features:\n",
+    "  cropped_features.append(f[:min_len])"
    ]
   },
   {
@@ -278,7 +292,8 @@
     "# columns where the sum is more than 100\n",
     "display((features_df.sum() > 100))\n",
     "\n",
-    "# TODO: remove columns with no information"
+    "# TODO: remove columns with no information\n",
+    "features_df = features_df.loc[:, features_df.sum() > 0]"
    ]
   },
   {
@@ -327,7 +342,21 @@
    },
    "outputs": [],
    "source": [
-    "# TODO: scale/normalize features"
+    "# TODO: scale/normalize features\n",
+    "min_max_scaler = MinMaxScaler().set_output(transform=\"pandas\") \n",
+    "features_scaled_df = min_max_scaler.fit_transform(features_df) \n",
+    "features_scaled_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "std_scaler = StandardScaler().set_output(transform=\"pandas\") \n",
+    "features_scaled__df = std_scaler.fit_transform(features_df)\n",
+    "features_scaled_df"
    ]
   },
   {
@@ -369,7 +398,8 @@
    },
    "source": [
     "<span style=\"color:hotpink;\">\n",
-    "EDIT THIS CELL WITH ANSWER\n",
+    "No, the traning accuracy is same by using MinMax or Standard scaling strategy.  \n",
+    "The fact suggests that our data is relatively well-behaved and does not contain extreme outliers.\n",
     "</span>"
    ]
   },
@@ -412,7 +442,10 @@
    },
    "outputs": [],
    "source": [
-    "# TODO: look at the imgs and labels variables and get some information about the data"
+    "# TODO: look at the imgs and labels variables and get some information about the data\n",
+    "\n",
+    "print(len(imgs))\n",
+    "print([(imgs[i], labels[i]) for i in range(5)])"
    ]
   },
   {
@@ -470,10 +503,23 @@
    "outputs": [],
    "source": [
     "# TODO: look at characteristics/dimensions of the images\n",
+    "for img in imgs[:5]:\n",
+    "  print(img.size)\n",
+    "\n",
     "\n",
     "# TODO: go through the images and make their dimensions consistent\n",
+    "imgs_resized = []\n",
+    "for img in imgs:\n",
+    "  imgs_resized.append(img.resize((210, 210)))\n",
     "\n",
-    "# TODO: look at some images"
+    "for img in imgs_resized[:5]:\n",
+    "  print(img.size)\n",
+    "\n",
+    "# TODO: look at some images\n",
+    "display(imgs[1])\n",
+    "display(imgs_resized[1])\n",
+    "display(imgs[2])\n",
+    "display(imgs_resized[2])"
    ]
   },
   {
@@ -496,10 +542,27 @@
    "outputs": [],
    "source": [
     "# TODO: calculate grayscale pixel values\n",
+    "imgs_gray = []\n",
+    "for img in imgs_resized:\n",
+    "  imgs_pxs = get_pixels(img)\n",
+    "\n",
+    "  gray_pxs = []\n",
+    "  for r, g, b in imgs_pxs:\n",
+    "    l = int((r + g + b) / 3)\n",
+    "    gray_pxs.append(l)\n",
     "\n",
     "# TODO: look at some images with make_image()\n",
+    "  gray_img = make_image(gray_pxs, img.width, img.height)\n",
+    "  imgs_gray.append(gray_img)\n",
     "\n",
-    "# TODO: create DataFrame"
+    "imgs_gray[1]\n",
+    "\n",
+    "# TODO: create DataFrame\n",
+    "features = []\n",
+    "for img in imgs_gray:\n",
+    "  features.append(get_pixels(img))\n",
+    "features_df = pd.DataFrame(features)\n",
+    "features_df"
    ]
   },
   {
@@ -544,7 +607,10 @@
    },
    "outputs": [],
    "source": [
-    "# TODO: create scaler object, scale data and re-run classification"
+    "# TODO: create scaler object, scale data and re-run classification\n",
+    "min_max_scaler = MinMaxScaler().set_output(transform=\"pandas\") \n",
+    "features_scaled_df = min_max_scaler.fit_transform(features_df) \n",
+    "features_scaled_df"
    ]
   },
   {
@@ -567,7 +633,7 @@
    },
    "source": [
     "<span style=\"color:hotpink;\">\n",
-    "EDIT THIS CELL WITH ANSWER\n",
+    "In this case different scaling strategies did not influence the prediction results. The training accuracy stayed exactly the same before and after applying MinMax scaling. I think it is because pixel are already within 255, scaling will not change the relative structure of the data.\n",
     "</span>"
    ]
   },
@@ -1086,7 +1152,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "5020",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1100,7 +1166,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
